# alchemy

./: Cargo.toml  LICENSE
assets/design/: reaction_rules.json
docs/: alchemy_design.md
src/: lib.rs  main.rs
src/alchemy/: brewing.rs  components.rs  compound.rs  compounds.rs  debug.rs  element.rs  element_counts.rs  mod.rs  resources.rs  systems.rs  transitions.rs
