[package]
name = "alchemy"
version = "0.1.0"
authors = ["TLovell <trevorlovelldesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9"
rand = "0.8"
nom = "7.0"
thiserror = "1.0"
